--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: 1.6.0
-  latlong2: ^0.9.1
-  flutter_map: ^6.0.0
+  http: ^1.6.0
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.0
+  maps_toolkit: ^3.1.0
+  provider: ^6.1.5+1
+  file_picker: ^8.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - assets/planta_shopping.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
